Closed Bug 630883 Opened 15 years ago Closed 15 years ago

Crash at [@ nsDOMWindowUtils::FindElementWithViewId]

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b12
Tracking Status
fennec 2.0+ ---

People

(Reporter: jdm, Assigned: stechz)

References

Details

Attachments

(1 file)

https://crash-stats.mozilla.com/report/index/299a7d66-235f-41cb-a2d5-ac05b2110202 >1010 nsRefPtr<nsIContent> content = nsLayoutUtils::FindContentFor(aID); >1011 return CallQueryInterface(content, aResult); >1012 } FindContentFor can return null so this is unsafe, and it apparently can be hit in the wild.
Where by "wild" we mean the code in Fennec's browser.js. ;) But yes, this is clearly bogus, seems to me. Want to patch?
In fact, the prescontext part of this function is bogus too; presContext can easily be null. So could document->GetRootElement(). Looks like a regression from bug 605618.
Blocks: 605618
I'll take it unless someone else has started.
Assignee: nobody → ben
Status: NEW → ASSIGNED
Attachment #509156 - Flags: review?(jones.chris.g)
Attachment #509156 - Flags: review?(jones.chris.g) → review+
tracking-fennec: --- → 2.0+
Keywords: checkin-needed
This was landed but wasn't marked as fixed. http://hg.mozilla.org/mozilla-central/rev/c0397dc901f4
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: