Bug 630883 Crash at [@ nsDOMWindowUtils::FindElementWithViewID] r=cjones a=blocking-fennec